--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,57 @@
-/.metadata/
+# =========================
+# Eclipse
+# =========================
+.metadata/
+.project
+.classpath
+.settings/
+
+# =========================
+# IntelliJ / JetBrains
+# =========================
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# =========================
+# VS Code
+# =========================
+.vscode/
+
+# =========================
+# Node / Angular
+# =========================
+node_modules/
+dist/
+tmp/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+.angular/
+coverage/
+
+# =========================
+# Java / Spring Boot
+# =========================
+target/
+bin/
+*.class
+*.jar
+*.war
+*.ear
+*.log
+hs_err_pid*
+
+# =========================
+# Docker
+# =========================
+/docker/data/
+*.pid
+
+# =========================
+# OS generated files
+# =========================
+.DS_Store
+Thumbs.db
